...
sealed class SlideEffect(type: Int, title: String, resString: StringResource): Select<Int>(type, title, resString){
    data object Default : SlideEffect(0, "Default", Res.string.default_effect)
    data object Cube : SlideEffect(1, "Cube", Res.string.cube_effect)
    data object Reveal : SlideEffect(2, "Reveal", Res.string.reveal_effect)
    data object Carousel: SlideEffect(3, "Carousel", Res.string.carousel_effect)
    data object Flip: SlideEffect(4, "Flip", Res.string.flip_effect)
    data object DuoFold: SlideEffect(5, "Duo Fold", Res.string.duo_fold_effect)
    companion object {
        const val key: String = "SlideEffect"
        fun fromValue(type: Int): SlideEffect{
            return when(type){
                0 -> Default
                1 -> Cube
...
